# Fight.io

./: .gitignore  CMakeLists.txt  Client.cpp  Client.hpp  README.md  Server.cpp  Server.hpp  Untitled Diagram.drawio  main - Client.cpp  main - Server.cpp
Client/: CMakeLists.txt
Client/config/: config.cfg
Client/include/: Client.hpp  ConnectScreen.hpp  Drawable_Player.hpp  GameScreen.hpp  Screen.hpp
Client/include/include/: ConnectScreen.hpp  Menu.hpp  Window.hpp
Client/src/: ConnectScreen.cpp  Drawable_Player.cpp  GameScreen.cpp
Client/src/src/: Client.cpp
Includes/: Weapon.cpp  Weapon.hpp  player.cpp  player.hpp
SFML/: Client.cpp  Client.hpp  ConnectScreen.cpp  ConnectScreen.hpp  Drawable_Player.cpp  Drawable_Player.hpp  GameScreen.cpp  GameScreen.hpp  HpBar.cpp  HpBar.hpp  Menu.cpp  Menu.hpp  SFML.cbp  SFML.depend  SFML.layout  Screen.cpp  Screen.hpp  Weapon.cpp  Weapon.hpp  Window.cpp  Window.hpp  file.txt  log.txt  player.cpp  player.hpp  poking.txt
SRC/: Client.cpp  ConnectScreen.cpp  Menu.cpp  Weapon.cpp  main.cpp  player.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/: GameEngine.hpp  Server.hpp  ServerException.hpp  ServerGui.hpp
Server/include/include/: GameEngine.hpp
Server/old_server_src/: Server.cpp
Server/src/: GameEngine.cpp  Server.cpp  ServerGui.cpp
Server/src/src/: GameEngine.cpp  ServerGui.cpp
ServerUI/: CMakeLists.txt  main.cpp
ServerUI/include/: ServerEngine.hpp  ServerUI.hpp  ServerWindow.hpp
ServerUI/include/button/: ConnectionButton.hpp
ServerUI/src/: ServerEngine.cpp  ServerUI.cpp  ServerWindow.cpp
ServerUI/src/button/: ConnectionButton.cpp
TGUI-0.8/doc/html/: AbsoluteOrRelativeValue_8hpp_source.html  Animation_8hpp_source.html  Any_8hpp_source.html  BitmapButton_8hpp_source.html  BoxLayoutRatios_8hpp_source.html  BoxLayoutRenderer_8hpp_source.html  BoxLayout_8hpp_source.html  ButtonRenderer_8hpp_source.html  Button_8hpp_source.html  Canvas_8hpp_source.html  ChatBoxRenderer_8hpp_source.html  ChatBox_8hpp_source.html  CheckBox_8hpp_source.html  ChildWindowRenderer_8hpp_source.html  ChildWindow_8hpp_source.html  ClickableWidget_8hpp_source.html  Clipboard_8hpp_source.html  Clipping_8hpp_source.html  Color_8hpp_source.html  ComboBoxRenderer_8hpp_source.html  ComboBox_8hpp_source.html  Config_8hpp_source.html  Container_8hpp_source.html  CopiedSharedPtr_8hpp_source.html  CustomWidgetForBindings_8hpp_source.html  DataIO_8hpp_source.html  DefaultFont_8hpp_source.html  Deserializer_8hpp_source.html  EditBoxRenderer_8hpp_source.html  EditBox_8hpp_source.html  Exception_8hpp_source.html  FloatRect_8hpp_source.html  Font_8hpp_source.html  Global_8hpp_source.html  Grid_8hpp_source.html  GroupRenderer_8hpp_source.html  Group_8hpp_source.html  Gui_8hpp_source.html  HorizontalLayout_8hpp_source.html  HorizontalWrap_8hpp_source.html  (+354 more)
TGUI-0.8/lib/cmake/TGUI/: TGUIStaticTargets.cmake
asio-wrapper/: CMakeLists.txt  main.cpp
asio-wrapper/asio-client/: CMakeLists.txt  main.cpp
asio-wrapper/asio-client/include/: AsioClient.hpp  Client.hpp
asio-wrapper/asio-client/src/: AsioClient.cpp  Client.cpp
asio-wrapper/asio-common/: CMakeLists.txt
asio-wrapper/asio-common/include/: ControlMessage.hpp  NetworkCallback.hpp  NetworkConnection.hpp
asio-wrapper/asio-common/src/: ControlMessage.cpp  NetworkCallback.cpp  NetworkConnection.cpp
asio-wrapper/asio-server/: CMakeLists.txt  main.cpp
asio-wrapper/asio-server/include/: Connection.hpp  Message.hpp  Server.hpp  ServerAgent.hpp
asio-wrapper/asio-server/src/: Connection.cpp  Message.cpp  Server.cpp  ServerAgent.cpp
asio-wrapper/include/: Connection.hpp  Server.hpp
asio-wrapper/src/: Connection.cpp  Server.cpp
client/: Client.cpp  Client.hpp  main - Client(test).cpp  main - Client.cpp  player.cpp  player.hpp
common/: CMakeLists.txt
common/config/: config.cfg
common/include/: Player.hpp  Weapon.hpp
common/src/: Player.cpp  Weapon.cpp
menu/: Menu.cpp  main.cpp
old_stuff/menu/: Menu.hpp
server/: Drawable_Player.cpp  Drawable_Player.hpp  GameEngine.cpp  GameEngine.hpp  Server.cbp  Server.cpp  Server.depend  Server.hpp  Server.layout  ServerGui.cpp  ServerGui.hpp  Weapon.cpp  Weapon.hpp  file.txt  ip.txt  main - Server.cpp  main.cpp  player.cpp  player.hpp
simplgui/: CMakeLists.txt
simplgui/include/: Button.hpp  Connector.hpp  Event.hpp  FileResourcesGetter.hpp  Renderer.hpp  ResourcesGetter.hpp  StateDepProperty.hpp  TextBox.hpp  Theme.hpp  Tools.hpp  Widget.hpp
simplgui/src/: Button.cpp  Connector.cpp  Event.cpp  FileResourcesGetter.cpp  Renderer.cpp  TextBox.cpp  Widget.cpp
version 0.1/: Client.cpp  Client.hpp  Drawable_Player.hpp  GameScreen.cpp  GameScreen.hpp  Menu.cpp  Menu.hpp  Player_drawable.cpp  Player_drawable.hpp  SFML.cbp  SFML.depend  SFML.layout  Screen.hpp  Weapon.cpp  Weapon.hpp  Window.cpp  Window.hpp  main - Client.cpp  main.cpp  player.cpp  player.hpp
